--- a/nimbus/filesets/templates/remove_fileset.html
+++ b/nimbus/filesets/templates/remove_fileset.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 {% endblock %}
@@ -10,26 +11,26 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Confirmação de remoção</h2>
+		<h>{% trans "Removal confirmation" %}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
         <form method="post" action="">
-            <h1>Você está prestes a remover o conjunto de arquivos "{{fileset.name}}".</h1>
+            <h1>{% trans "You are about to delete the file sets" %}{{fileset.name}}".</h1>
 				{% if procedures %}
-				Os seguintes procedimentos de backup utilizam este conjunto de arquivos:
+				{% trans "The following backup procedures use this file sets:" %}
 					{% for procedure in procedures %}
 				<li>{{procedure.name}}</li>
 					{% endfor %}
-				Remover este conjunto de não afetará o funcionamento dos backups listados.
+				{% trans "Remove this set does not affect the operation of the listed backups." %}
 				{% else %}
-				Não existe nenhum procedimento de backup utilizando este conjunto de arquivos.
+				{% trans "There is no backup procedure using this file sets." %}
 				{% endif %}
 			<br />
-			<p><strong>Esta operação não poderá ser desfeita. Deseja prosseguir mesmo assim?</strong></p>
+			<p><strong>{% trans "This operation can not be undone. Would you like to proceed anyway?" %}</strong></p>
             <p>
                 <!-- <input type="submit" class="css3button positive" name="confirm" value="Prosseguir" /> ou <a href="" onclick="history.back(-1); return false;">Cancelar</a> -->
-                <a href="/filesets/do_delete/{{fileset.id}}" class="css3button negative">Excluir</a> ou <a href="" class="css3button positive" onclick="history.back(-1); return false;">Cancelar</a>
+                <a href="/filesets/do_delete/{{fileset.id}}" class="css3button negative">{% trans "Delete" %}</a> ou <a href="" class="css3button positive" onclick="history.back(-1); return false;">{% trans "Cancel" %}</a>
             </p>
         </form>
     </div>
