--- a/nimbus/procedures/templates/procedures_history.html
+++ b/nimbus/procedures/templates/procedures_history.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/procedures.js"></script>
@@ -23,17 +24,17 @@
         <div class="pagination">
             <span class="step-links">
                 {% if jobs.has_previous %}
-                    <a href="?page=1">&lt;&lt; primeira</a>
-                    <a href="?page={{ jobs.previous_page_number }}">&lt; anterior</a>
+                    <a href="?page=1">{% trans "&lt;&lt; first" %}</a>
+                    <a href="?page={{ jobs.previous_page_number }}">{% trans "&lt; previous" %}</a>
                 {% endif %}
         
                 <span class="current">
-                    Página {{ jobs.number }} de {{ jobs.paginator.num_pages }}.
+                    {% trans "Page" %} {{ jobs.number }} {% trans "of" %} {{ jobs.paginator.num_pages }}.
                 </span>
         
                 {% if jobs.has_next %}
-                    <a href="?page={{ jobs.next_page_number }}">próxima &gt;</a>
-                    <a href="?page={{ jobs.paginator.num_pages }}">última &gt;&gt;</a>
+                    <a href="?page={{ jobs.next_page_number }}">{% trans "next &gt;" %}</a>
+                    <a href="?page={{ jobs.paginator.num_pages }}">{% trans "last &gt;&gt;" %}</a>
                 {% endif %}
             </span>
         </div>
