--- a/nimbus/procedures/templates/remove_procedure.html
+++ b/nimbus/procedures/templates/remove_procedure.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/procedures.js"></script>
@@ -12,38 +13,38 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Confirmação de remoção</h2>
+		<h2>{% trans "Removal Confirmation" %}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
         <form method="post" action="">
-            <h1>Você está prestes a remover o procedimento de backup "{{procedure.name}}".</h1>
+            <h1>{% trans "You are about to delete the backup procedure" %} "{{procedure.name}}".</h1>
 			<ul>
-				<li>O computador <strong>"{{procedure.computer.name}}"</strong> não será afetado.</li>
+				<li>{% trans "The computer" %} <strong>"{{procedure.computer.name}}"</strong> {% trans "will not be affected." %}</li>
 				{% if procedure.fileset.is_model %}
-				<li>O perfil do conjunto de arquivos <strong>"{{procedure.fileset.name}}"</strong> não será afetado.</li>
+				<li>{% trans "The profile of the set of files" %}<strong>"{{procedure.fileset.name}}"</strong>{% trans "will not be affected." %}</li>
 				{% else %}
-				<li>O conjunto de arquivos <strong>"{{procedure.fileset.name}}"</strong> é usado apenas para este backup e <strong>será removido</strong>.</li>
+				<li> {% trans "The set of files" %}<strong>"{{procedure.fileset.name}}"</strong>{% trans "is only used for this backup and" %}<strong>{% trans "will be removed" %}</strong>.</li>
 				{% endif %}
 				{% if procedure.schedule.is_model %}
-				<li>O perfil de agendamento <strong>"{{procedure.schedule.name}}"</strong> não será afetado.</li>
+				<li>{% trans "The profile of schedule" %}<strong>"{{procedure.schedule.name}}"</strong>{% trans "will not be affected" %}</li>
 				{% else %}
-				<li>O agendamento <strong>"{{procedure.schedule.name}}"</strong> é usado apenas para este backup e <strong>será removido</strong>.</li>
+				<li> {% trans "The schedule" %} <strong>"{{procedure.schedule.name}}"</strong> {% trans "is only used for this backup and" %} <strong>{% trans "will be removed" %}</strong>.</li>
 				{% endif %}
 				{% if last_jobs %}
-				<li>Os seguintes backups serão apagados e não mais poderão ser restaurados:</li>
+				<li>{% trans "The following backups will be deleted and can not be restored:" %}</li>
 				<div style="margin-left: 50px; margin-right: 50px;">
         		{% include "stat_block.html" %}
 				</div>
 				{% else %}
-				<li>Não existe nenhum backup salvo deste procedimento</li>
+				<li>{% trans "There is no backup unless this procedure" %}</li>
 				{% endif %}
 			</ul>
             <br \>
-			<p><strong>Esta operação não poderá ser desfeita. Deseja prosseguir mesmo assim?</strong></p>
+			<p><strong>{% trans "This operation can not be undone. Would you like to proceed anyway?" %}</strong></p>
             <p>
                 <!-- <input type="submit" class="css3button positive" name="confirm" value="Prosseguir" /> ou <a href="" onclick="history.back(-1); return false;">Cancelar</a> -->
-                <a href="/procedures/{{procedure.id}}/do_delete/" class="css3button negative">Excluir</a> ou <a href="" class="css3button positive" onclick="history.back(-1); return false;">Cancelar</a>
+                <a href="/procedures/{{procedure.id}}/do_delete/" class="css3button negative">{% trans "Remove" %}</a> ou <a href="" class="css3button positive" onclick="history.back(-1); return false;">{% trans "Cancel" %}</a>
             </p>
         </form>
     </div>
