--- a/nimbus/computers/templates/computers_add.html
+++ b/nimbus/computers/templates/computers_add.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <link rel="stylesheet" type="text/css" href="/media/css/computers.css" />
