--- a/nimbus/computers/templates/base_computers.html
+++ b/nimbus/computers/templates/base_computers.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 
 {% block headtags %}
+<script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/computers.css" />
 <script type="text/javascript" src="/media/js/computers.js"></script>
 {% endblock %}
